@@ -33,23 +33,28 @@
 
  - [X] Tools packaged into the Docker container
    - [X] [[https://github.com/pcb2gcode/pcb2gcode%20][pcb2gcode]] : Tool for mapping Gerber files to gcode
+   - [X] [[https://www.linuxcnc.org/docs/2.4/html/gui_image-to-gcode.html][image-to-gcode]]: Tool to convert image to gcode 
    - [X] [[https://linuxcnc.org/][linuxcnc]]: Simulator for validating CNC execution paths
    - [X] [[file:docker/etool/etool.sh][etool.sh]]: Simple bash script for managing configuration and
      diretory structures
- - [X] Workflow
+ - [X] Workflow for processing gerbers
    - [X] Gerber input:
      - [X] Input example project Gerber files
      - [X] Accept project Gerber files from [[https://www.kicad.org/][Kicad EDA -tool]]
      - [X] Proviso for accepting project Gerber files from EDA tools using
        [[file:docker/etool/pcb2gcode-control.template][different naming scheme]]
-   - [X] cam -command converting project Gerger files to gcode
+   - [X] gerber -command converting project Gerger files to gcode
      - [X] [[file:docker/etool/pcb2gcode.ini][opinionated subset]] of ~pcb2gcode~ configurations for
        initialize configuration (possible to add other [[https://github.com/pcb2gcode/pcb2gcode/wiki][~pcb2gcode~ CLI
        configuration options]])
      - [X] set ~pcb2gcode~  autolevelling [on/off]
    - [X] [[file:docker/etool/pcb2gcode-control.template][Gcode output]]:
      - [X] Front, Back, EdgeCut, PTH drill, NPTH drill -gcode files
-   - [X] simulator -command for validating Gcode output
+     - [X] Scrit to create alignment drilling PTH-ALIGN.ngc from PTH.nfc
+ - [X] Workflow for processing images
+   - [X] Raster image (e.g. png)
+   - [X] image -command mapping grey scale value 0..255 to gcode depth carving
+ - [X] simulator -command for validating Gcode output
  - [X] Configuration management
    - [X] almost 'zero configuration' - requiring one empty, writable data directory
    - [X] directory structure and configurations automagically
@@ -69,9 +74,9 @@ Command line usage
 #+RESULTS:
 #+begin_example
 
-         marcus2002/etool:5
+         marcus2002/etool:6
 
-         A tool for mapping Gerber files to gcode for CNC
+         A tool for mapping Gerber/image files to gcode for CNC
          machining and launching linuxcnc -simulator for validating
          CNC execution paths.
 
@@ -80,10 +85,15 @@ Command line usage
          docker DOCKER_OPTS run marcus2002/etool CMD_AND_OPTIONS ...
 
          where CMD_AND_OPTIONS one of follwoing operations:
-         o gerber PROJECT [USER] :   create gcode for PROJECT Gerber -files
-                                     USER -specific cam parameters replace default paramerters
-                                     (/etool/pcb2gcode.ini, /etool/pcb2gcode-control.template)
+         o gerber PROJECT [USER] : create gcode for PROJECT Gerber -files
+                                   USER -specific cam parameters replace default paramerters
+                                   (/etool/pcb2gcode.ini, /etool/pcb2gcode-control.template)
+         o adrill PROJECT        : convert PTH -drill file to alignement PTH-ALIGN drill file,
+                                   used for two sided boards
          o simulator             : start 'linuxcnc'
+
+         or image cam operation:
+         o image IMAGE           : convert IMAGE to gcode 
 
          or one of data management utilities:
          o ls                    : list data files in /etool -data directories
@@ -114,7 +124,7 @@ Command line usage
 
          mkdir $HOME/.etool           # create working directory
 
-         export ETOOL='docker run --rm --user 1000:1000 -e DISPLAY=unix:0 -v /tmp/.X11-unix:/tmp/.X11-unix -v $HOME/.etool:/etool marcus2002/etool:5'
+         export ETOOL='docker run --rm --user 1000:1000 -e DISPLAY=unix:0 -v /tmp/.X11-unix:/tmp/.X11-unix -v $HOME/.etool:/etool marcus2002/etool:6'
 
          $ETOOL cleanup               # clean working directories
          $ETOOL ls                    # empty directories
@@ -125,10 +135,12 @@ Command line usage
 
          The commands can be given as a one-liner. For example, for the command above:
 
-         $ETOOL cleanup ls example pad2pad ls gerber pad2pad -- simulator
+         $ETOOL cleanup ls example gerber pad2pad ls gerber pad2pad -- simulator
          
          Notice! Separator '--' in cam -command signaling end of optional parameters
 #+end_example
+
+
 
 
 ** Architecture
@@ -672,7 +684,7 @@ ls $(pwd)/tmp/etool
 : pcb2gcode.ini
 
 To create user specific configuration files copy these files to
-~pcb2gcode-${USR}.ini~ and ~pcb2gcode-control-$USR..template~. For
+~pcb2gcode-${USR}.ini~ and ~pcb2gcode-control-$USR.template~. For
 example to create user specific configuration files USER1 issue
 commands, and edit newly created files at will.
 
@@ -701,10 +713,7 @@ ls $(pwd)/tmp/etool
 : pcb2gcode-USER1.ini
 
 
-and cam -command can use the user specific configuration files. Notice
-the output specifying configuration files
-~/etool/pcb2gcode-control-USER1.template~ and
-~/etool/pcb2gcode-USER1.ini~.
+and cam -command can access the user specific configuration files:
 
 #+BEGIN_SRC bash :eval no-export :results output :noweb yes :exports both
 <<run-etool>> example gerber pad2pad gerber pad2pad USER1
@@ -756,6 +765,10 @@ Exporting milldrill... Exporting drill... DONE. The board should be drilled from
 END.
 #+end_example
 
+Notice, how the output above refers to configuration files
+~/etool/pcb2gcode-control-USER1.template~ and
+~/etool/pcb2gcode-USER1.ini~.
+
 
 ** Example projects 
 
@@ -783,10 +796,11 @@ The tool includes following example gerbers projects:
      - back copper track 0.25 (B_Cu)
 
 
-The tool includes following example image:
-- hello.eps
+The tool includes following example images for demonstrating ~image~
+command:
+- ~hello.eps~
   - 9 x 25 mm black and white text Hello
-- sing.png
+- ~sign.png~
   - 857 x 854 px 50 km/h traffic sign
 
 
